feat: more properties to post
